Bug 119356 - Hovering over Input list field should make mouse cursor turn into a hand
Summary: Hovering over Input list field should make mouse cursor turn into a hand
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: x86-64 (AMD64) All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Fields
  Show dependency treegraph
 
Reported: 2018-08-19 08:44 UTC by Jerzy Moruś
Modified: 2018-10-24 10:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
video showing 6.1.0.3 (276.63 KB, video/mp4)
2018-08-19 09:44 UTC, BogdanB
Details
Example file with an Input list (7.92 KB, application/vnd.oasis.opendocument.text)
2018-09-19 12:53 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jerzy Moruś 2018-08-19 08:44:47 UTC
After placing the mouse pointer on the „Input list” field (CTRL + F2 -> Function), the appearance of this indicator on the hand symbol does not change. There is also no "balloon" with the „Name” of this  field.
For this reason, there is no information about the field being indicated.
Comment 1 BogdanB 2018-08-19 09:44:32 UTC
Created attachment 144280 [details]
video showing 6.1.0.3

This is the behaviour on 
Versiune: 6.1.0.3
Identificator construire: efb621ed25068d70781dc026f7e9c5187a4decd1
Fire CPU: 4; OS: Linux 4.15; Redare UI: implicit; VCL: gtk2; 
Setări regionale: ro-RO (ro_RO.UTF-8); Calc: group threaded

The behaviour you described is here?
Comment 2 Buovjaga 2018-09-17 17:02:44 UTC
What do you mean by "the appearance of this indicator on the hand symbol does not change"?
What you call "balloon" is probably a tooltip, right?

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the information.
Comment 3 Jerzy Moruś 2018-09-19 12:11:40 UTC
I need to verify my problem.
I think the field identification method should be as follows:
The mouse pointer located in the field area should have a changed shape and this shape would inform you that we are pointing the field. Currently, the mouse pointer has a standard shape.
The hint (baloon) should display the name of the field, not its content, because this content visible in the document anyway. As a result, the hint shows the same as what is already written, and after disappearing the hint, the user has no information that indicates the Writer program field.
In the current version (6.0.6 x64), the mouse pointer pointing to the "Input list" field does not display any hints (baloon). And because the shape of the mouse is not changed either, there is no signaling that there is a field in this place.
Comment 4 Buovjaga 2018-09-19 12:52:33 UTC
Bibisected on Ubuntu 14.04 with bibisect-44max to https://cgit.freedesktop.org/libreoffice/core/commit/?id=21470afc81cd7d4c0bd165ff2877ae69f1bfc89a

Change inline-edit mouse input handling

Adding Cc: to Jan-Marek Glogowski
Comment 5 Buovjaga 2018-09-19 12:53:16 UTC
Created attachment 145014 [details]
Example file with an Input list
Comment 6 Commit Notification 2018-09-20 10:38:13 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=51dac33cfd7d6c52577f9d6d300f85a632f4371d

tdf#119356 fix hand cursor for none input fields

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2018-09-20 11:46:55 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b613eeeb566adc8955248c31b94a7ed32ebba4d1

tdf#119356 add input lists to tooltip handling

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2018-10-23 11:28:01 UTC
A polite ping to Jan-Marek Glogowski:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 9 Xisco Faulí 2018-10-24 10:27:20 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: cd6dd8c6f3562cbccbc971b916c6a8933840ffeb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Jan-marek, thanks for fixing this!!