tdf#119356 fix hand cursor for none input fields

Inside the input field the cursor still changes to "edit", as
expected.

Change-Id: I4cec6ae5233143f5a0e4f1979deeb674d909f76c
Reviewed-on: https://gerrit.libreoffice.org/60796
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>